# wpm2

./: README.md
wpm2_bringup/: CMakeLists.txt  package.xml
wpm2_bringup/config/: sensors_kinect2.yaml  wpm2_controllers.yaml
wpm2_bringup/include/driver/: WPM2_Driver.h
wpm2_bringup/launch/: display.launch  fake.launch  joints_states.launch  joints_test.launch  minimal.launch  moveit.launch  plan_exec_no_rviz.launch  planning.launch
wpm2_bringup/meshes/: wpm2_finger.stl  wpm2_joint_1.stl  wpm2_joint_2.stl  wpm2_joint_3.stl  wpm2_joint_4.stl  wpm2_joint_5.stl  wpm2_palm.stl
wpm2_bringup/moveit/: planning_rviz.launch
wpm2_bringup/rviz/: display.rviz  planning.rviz  urdf.rviz
wpm2_bringup/scripts/: create_udev_rules.sh
wpm2_bringup/src/: wpm2_core.cpp  wpm2_fake.cpp  wpm2_test.cpp
wpm2_bringup/src/driver/: WPM2_Driver.cpp
wpm2_bringup/urdf/: wpm2_moveit.urdf  wpm2_moveit_kinect2.urdf
wpm2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
wpm2_moveit_config/config/: WPM-2.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
wpm2_moveit_config/launch/: WPM-2_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
wpm2_tutorials/: CMakeLists.txt  package.xml
wpm2_tutorials/cfg/: JointDegree.cfg
wpm2_tutorials/launch/: gripper_client.launch  joint_control_degree.launch  mobile_mani_control.launch  mobile_mani_plan_exec.launch  pick_place.launch  plan_execute.launch  planning_sample.launch  rcfg_degree.launch  trackbars_degree.launch
wpm2_tutorials/src/: mobile_mani_control.cpp  mobile_mani_plan_exec.cpp  scene_add_collision_obj.cpp  wpm2_gripper_client.cpp  wpm2_joint_control_degree.cpp  wpm2_joint_control_radian.cpp  wpm2_joint_rcfg.cpp  wpm2_pick_place.cpp  wpm2_plan_execute.cpp  wpm2_planning.cpp  wpm2_trackbars.cpp
